// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 cXQSCO"
>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 bjsrTz"
  >
    다양한 디바이스에서 시청하세요. 언제든 해지하실 수 있습니다.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 cXQSCO"
>
  <h1
    class="feature__Title-sc-6swrp6-1 kGnPHh"
  >
    영화, TV 프로그램을 무제한으로.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 cXQSCO"
>
  <h1
    class="feature__Title-sc-6swrp6-1 kGnPHh"
  >
    영화, TV 프로그램을 무제한으로.
  </h1>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 bjsrTz"
  >
    다양한 디바이스에서 시청하세요. 언제든 해지하실 수 있습니다.
  </h2>
</div>
`;
